Added get first call in method.